# Echo

./: .dockerignore  .env.example  .gitignore  Dockerfile.embedder.cpu  Dockerfile.embedder.gpu  Dockerfile.generation  Dockerfile.retrieval  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/auth/: api.yaml
configs/embedder/: api.yaml  embedder.yaml  prefixes.yaml
configs/generation/: agent.yaml  api.yaml  llm.yaml
configs/retrieval/: api.yaml
configs/sparse_store/: bm25.yaml
configs/store/: storage.yaml
configs/vector_store/: faiss.yaml
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ChatLayout.jsx  ChatView.jsx  Login.jsx  Markdown.jsx  api.js  styles.css
src/echo/: config.py
src/echo/api/: auth_api.py  embedder_api.py  llm_api.py  retrieval_api.py  service.py  sessions_api.py
src/echo/generation/: agent.py  llm_client.py  tool_registry.py
src/echo/generation/tools/: document_search.py  web_search.py
src/echo/indexing/embedders/: embedder.py
src/echo/indexing/sparse_store/: bm25_store.py
src/echo/indexing/vector_store/: base_store.py  factory.py  faiss_store.py  faiss_variants.py
src/echo/retrieval/: embedder_client.py  fusion.py  retrieval_service.py
src/echo/store/: session_store.py  user_store.py
