[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Echo"
version = "0.0.1"
description = "TEMPORARY"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
    "pydantic",
    "python-dotenv"
]

[project.optional-dependencies]
embedder = ["torch", "sentence-transformers", "numpy"]
retrieval = ["faiss-cpu", "pandas", "httpx"]

[project.scripts]
echo-embedder = "echo.api.embedder_api:run"
echo-retrieval = "echo.api.retrieval_api:run"

[tool.setuptools.packages.find]
where = ["src"]
